--- a/j-core/views/p3/contact.html
+++ b/j-core/views/p3/contact.html
@@ -1,3 +1,55 @@
 <div>
-  <h1>Contact Page</h1>
+  <div class="background-block background-block-contact">
+    <section class="container-main">
+      <div class="background-block-content address-block">
+        <div class="heading-block">
+          <h1 class="heading-secondary">Hire me before someone else does!</h1>
+          <div class="sub-heading">AngularJS . UIUX . Creativity</div>
+        </div>
+        <h2>I'm an hour away from SF</h2>
+        <p><span class="icon-location_on icon-left"></span><strong>Tracy, ca</strong></p>
+        <p><a href="mailto:angularjs.uiux@gmail.com">angularjs.uiux@gmail.com</a></p>
+      </div>
+    </section>
+    <div class="overlay"></div>
+  </div><!-- bg block -->
+
+  <div class="email-block">
+    <div class="container-main">
+      <div class="grid-parent">
+        <div class="grid-child email-each">
+          <a href="mailto:angularjs.uiux@gmail.com">
+            <i class="fa fa-fire fa-3x"></i>
+            <p>Laser Focus</p>
+          </a>
+        </div>
+
+        <div class="grid-child email-each">
+          <a href="mailto:angularjs.uiux@gmail.com">
+            <i class="fa fa-battery-full fa-3x"></i>
+            <p>Ceaseless Work Ethic</p>
+          </a>
+        </div>
+
+        <div class="grid-child email-each">
+          <a href="mailto:angularjs.uiux@gmail.com">
+            <i class="fa fa-bolt fa-3x"></i>
+            <p>Talent</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div><!-- email block -->
+
+
+  <div class="map-google-embed">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100957.2076477036!2d-121.53547157252902!3d37.74519133744366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809014590a55994d%3A0xe8466f79e0af1499!2sTracy%2C+CA!5e0!3m2!1sen!2sus!4v1458554505106" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+
+  <div class="social-block">
+    <a href="https://www.linkedin.com/in/juliusalvarado" target="_blank" class="social-icon-each"><img src="css/img/buttons/linkedin.png" alt="img"></a>
+    <a href="https://plus.google.com/u/0/112344297862530715288" target="_blank" class="social-icon-each"><img src="css/img/buttons/google.png" alt="img"></a>
+    <a href="https://github.com/ideaguy3d" target="_blank" class="social-icon-each"><img src="css/img/buttons/github.png" alt="img"></a>
+    <a href="https://twitter.com/ideaguy3d" target="_blank" class="social-icon-each"><img src="css/img/buttons/twitter.png" alt="img"></a>
+  </div>
 </div>
