--- a/j-core/views/p3/featured.html
+++ b/j-core/views/p3/featured.html
@@ -1,3 +1,139 @@
-<div>
-  <h1>Featured Page</h1>
-</div>
+<!--<div class="notify notify-success">Notification Nation</div>-->
+<!--<div class="notify notify-error">Notification Nation</div>-->
+
+<!-- list of UI's & App's  -->
+<section class="container-full">
+    <h1 class="heading-secondary wow bounceInUp">User Interfaces/App's I've coded</h1>
+    <div class="featured-block">
+        <ul class="grid-parent ul-base">
+            <!-- great place to use ng directive to avoid repetitive work -->
+            <li class="featured-each grid-child">
+                <a href="https://www.ninja3d.xyz" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/jninja.png" alt="img" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">Ninja Publishers Review</div>
+                        <div class="featured-info-name">A 100% pure AngularJS SPA I developed</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://nakedwines.firebaseapp.com" class="featured-each-link" target="_blank">
+                    <img src="css/img/featured/jwines.png" alt="img" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">NakedWines.com UI Design</div>
+                        <div class="featured-info-name">Their designer gave me some mockups to implement. This is the 2nd version I coded.</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://wo3d.firebaseapp.com" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/jwo3d.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">Work Out 3D</div>
+                        <div class="featured-info-name">An AngularJS & WebGL hybrid app I coded during a hack-a-thon
+                        </div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="" class="featured-each-link">
+                    <img src="css/img/featured/jswap.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">SwapServe Mobile App Prototype</div>
+                        <div class="featured-info-name">A mobile app prototype I developed w/The Ionic Framework</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://meetupjs.firebaseapp.com" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/jmeetup.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">MeetupJS Angular App</div>
+                        <div class="featured-info-name">A meetup and event planer app I'm developing</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="http://julius.azurewebsites.net/" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/julius1.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">My 1st Portfolio site</div>
+                        <div class="featured-info-name">A site I coded for myself a while back</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="http://nakedwinestest.azurewebsites.net/" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/jwines2.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">Nakedwines.com UI Design</div>
+                        <div class="featured-info-name">The 1st version of a design I implemented for them using only HTML, CSS & jQuery.</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://tedfeed.firebaseapp.com" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/jtedfeed.png" alt="img" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">A Ted Talks Feed App</div>
+                        <div class="featured-info-name">An app I'm developing to display ted talks with real time controls</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="" class="featured-each-link">
+                    <img src="css/img/featured/jsci.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">My Sci Interactive LLC Start Up</div>
+                        <div class="featured-info-name">2nd failed startup attempt. I was building this app using the MEAN.js Stack.</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://julius.firebaseapp.com" target="_blank" class="featured-each-link">
+                    <img src="css/img/featured/julius2.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">2nd Portfolio Site</div>
+                        <div class="featured-info-name">I coded my 2nd portfolio UI purely in HTML, CSS, & jQuery. My design skills had sky rocketed by this point compared to my 1st portfolio UI.</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+
+            <li class="featured-each grid-child">
+                <a href="https://nextgencontacts.firebaseapp.com" class="featured-each-link">
+                    <img src="css/img/featured/jcontact.png" alt="" class="featured-each-img">
+                    <div class="featured-each-info">
+                        <div class="featured-info-title">Next Gen Contacts App</div>
+                        <div class="featured-info-name">A simple AngularJS SPA app I coded</div>
+                    </div>
+                    <div class="overlay-gradient"></div>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
+
+
+<script language="JavaScript" type="text/javascript">
+    new WOW().init();
+</script>
+
