--- a/j-core/views/p3/overview.html
+++ b/j-core/views/p3/overview.html
@@ -1,3 +1,14 @@
-<div>
-  <h1>Overview Page</h1>
+<div class="overview-video-block">
+  <section class="container-mid">
+    <div class="heading-block">
+      <h1 class="heading-primary">Welcome <i class="fa fa-heart"></i></h1>
+      <h2 class="heading-secondary">I'm Julius Alvarado</h2>
+      <div class="sub-heading">Front End Developer</div>
+    </div>
+    <div class="iframe-video-block">
+      <iframe src="https://player.vimeo.com/video/159771657?autoplay=1&loop=1" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <p><a href="https://vimeo.com/159771657">jan2015design</a> from <a href="https://vimeo.com/juliusalvarado">Julius Alvarado</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+      <p>A design I made in Adobe Illustrator back in January 2015</p>
+    </div>
+  </section>
 </div>
