--- a/j-core/views/j-core.home5.html
+++ b/j-core/views/j-core.home5.html
@@ -1,21 +1,179 @@
-<div>
-  <h1>j-core.home5.html</h1>
-  <h2>This will be my portfolio site ^_^</h2>
+<!-- landing section overview-->
+<div class="overview-video-block">
+    <section class="container-full">
+        <div class="landing heading-block">
+            <div class="push-right">
+                <h1 class="heading-primary wow zoomInDown" data-wow-delay="0.3s">Welcome <i class="fa fa-heart"></i>
+                </h1>
+                <h2 class="heading-secondary wow bounce" data-wow-delay="1.0s">I'm Julius Alvarado</h2>
+                <div class="sub-heading wow bounceInUp" data-wow-delay="1.6s">Software Engineer, Front End. Hacker.
+                    Designer.
+                </div>
+            </div>
+        </div>
 
-  <hr>
+        <div class="iframe-video-block">
+            <iframe src="https://player.vimeo.com/video/159771657?autoplay=1&loop=1" width="1492" height="843"
+                    frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
 
-  <div class="container-full" style="background: #999;">
-    <div class="grid-parent">
-      <div class="grid-child">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores distinctio doloremque error
-        exercitationem facilis hic omnis sunt tempore voluptatem. Aperiam expedita laudantium molestiae molestias odit
-        recusandae tenetur voluptas voluptatum.
-      </div>
-      <div class="grid-child">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores distinctio doloremque error
-        exercitationem facilis hic omnis sunt tempore voluptatem. Aperiam expedita laudantium molestiae molestias odit
-        recusandae tenetur voluptas voluptatum.
-      </div>
-    </div>
-  </div>
+        <div class="vid-caption">
+            <a href="https://vimeo.com/159771657">jan2015design</a> from
+            <a href="https://vimeo.com/juliusalvarado">Julius Alvarado</a> on <a href="https://vimeo.com">Vimeo</a>.
+            <p>A design I made in Adobe Illustrator back in January 2015 for my <a
+                    href="http://julius.azurewebsites.net/" target="_blank">1st Portfolio</a></a></p>
+        </div>
+    </section>
 </div>
+
+<!--
+
+ -->
+
+
+<!-- my development process, the steps I take-->
+<section class="ja-steps-block">
+    <div class="container-main">
+        <div class="heading-block">
+            <h2 class="heading-secondary wow zoomInDown">I'm in <i class="fa fa-heart-o fa-3x"></i> w/JavaScript </h2>
+            <div class="sub-heading wow slideInUp" data-wow-delay="0.5s">I totally "fan girl" over JavaScript (:</div>
+        </div>
+
+        <div class="grid-parent">
+            <div class="ja-vjs ja-steps-each grid-child">
+                <div class="vanillajs">Vanilla</div>
+                <div class="vanillajs">JavaScript</div>
+                <div class="ja-vjs">
+                    <div class="ja-steps-info">Vanilla JavaScript</div>
+                    <div class="font-smaller">Oh, how I enjoy functional programming, prototypical inheritance, &OOP
+                    </div>
+                </div>
+            </div>
+
+            <!-- warning: SVG code! -->
+            <div class="ja-steps-each grid-child">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 -10 120 120">
+                    <defs>
+                        <filter id="shadow" x="-50%" y="-50%" width="200%" height="200%">
+                            <feOffset result="offOut" in="SourceAlpha" dx="0" dy="0"></feOffset>
+                            <feGaussianBlur result="blurOut" in="offOut" stdDeviation="3"></feGaussianBlur>
+                            <feComponentTransfer in="blurOut" result="opacityOut">
+                                <feFuncA type="linear" slope="0.5"></feFuncA>
+                            </feComponentTransfer>
+                            <feBlend in="SourceGraphic" in2="opacityOut" mode="normal"></feBlend>
+                        </filter>
+                    </defs>
+                    <path d="      M 5 18.25      L 50 2.25      L 96 18      L 88.5 77      L 50 98.25      L 12 77.25      Z"
+                          fill="black" filter="url(#shadow)" class="outline"></path>
+                    <path d="      M 5 18.25      L 50 2.25      L 50 98.25      L 12 77.25      Z" fill="#de3641"
+                          class="left"></path>
+                    <path d="      M 50 2.25      L 96 18      L 88.5 77      L 50 98.25      Z" fill="#b13138"
+                          class="right"></path>
+                    <path d="      M 50 13      L 79.25 75.5      L 69.25 75.5      L 63 61.25      L 50 61.25      L 50 52.75      L 59.5 52.75      L 50 33.1      L 42 52.75      L 50 52.75      L 50 61.25      L 38.1 61.25      L 32.5 75.5      L 21.75 75.5      Z"
+                          fill="white" class="letter"></path>
+                </svg>
+                <div class="ja-steps-info">Angular JavaScript</div>
+                <div class="font-smaller">The 2-way data binding is 2nd to none. Dependency Injection makes coding so
+                    fun.
+                </div>
+            </div>
+
+            <!-- warning: SVG code! -->
+            <div class="ja-steps-each grid-child">
+                <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	width="600px" height="600px" viewBox="0 0 600 600" enable-background="new 0 0 600 600" xml:space="preserve">
+<rect fill="#222222" width="600" height="600"/>
+<circle fill="#00D8FF" cx="299.529" cy="299.628" r="50.167"/>
+<path fill="none" stroke="#00D8FF" stroke-width="24" stroke-miterlimit="10" d="M299.529,197.628
+	c67.356,0,129.928,9.665,177.107,25.907c56.844,19.569,91.794,49.233,91.794,76.093c0,27.991-37.041,59.503-98.083,79.728
+	c-46.151,15.291-106.879,23.272-170.818,23.272c-65.554,0-127.63-7.492-174.29-23.441c-59.046-20.182-94.611-52.103-94.611-79.559
+	c0-26.642,33.37-56.076,89.415-75.616C167.398,207.503,231.515,197.628,299.529,197.628z"/>
+<path fill="none" stroke="#00D8FF" stroke-width="24" stroke-miterlimit="10" d="M210.736,248.922
+	c33.649-58.348,73.281-107.724,110.92-140.48c45.35-39.466,88.507-54.923,111.775-41.505
+	c24.248,13.983,33.042,61.814,20.067,124.796c-9.81,47.618-33.234,104.212-65.176,159.601
+	c-32.749,56.788-70.25,106.819-107.377,139.272c-46.981,41.068-92.4,55.929-116.185,42.213
+	c-23.079-13.31-31.906-56.921-20.834-115.233C153.281,368.316,176.758,307.841,210.736,248.922z"/>
+<path fill="none" stroke="#00D8FF" stroke-width="24" stroke-miterlimit="10" d="M210.821,351.482
+	c-33.746-58.292-56.731-117.287-66.312-166.255c-11.544-58.999-3.382-104.109,19.864-117.566
+	c24.224-14.024,70.055,2.244,118.14,44.94c36.356,32.28,73.688,80.837,105.723,136.173c32.844,56.733,57.461,114.209,67.036,162.582
+	c12.117,61.213,2.309,107.984-21.453,121.74c-23.057,13.348-65.249-0.784-110.239-39.499
+	C285.567,460.886,244.898,410.344,210.821,351.482z"/>
+</svg>
+                <div class="ja-steps-info">React JavaScript</div>
+                <div class="font-smaller">Such an awesome library for coding UI. I'm definitely a Babel & JSX guy.</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- why-hire-->
+<section class="ja-why-hire-block">
+    <h2 class="heading-secondary">Why hire
+        <i class="fa fa-code"></i><strong>j.Alvarado()</strong><i class="fa fa-code"></i>?</h2>
+
+    <div class="ja-usage-block">
+        <div class="ja-usage-each clearfix">
+            <div class="ja-usage-info">
+                <ul>
+                    <li>I thoroughly understand functional programming, prototypical inheritance, & OOP</li>
+                    <li>I use tools like gulp, grunt, browserify, and bower to help automate builds.</li>
+                    <li>I have used node.js for a few express.js projects. I made a very serious attempt to learn
+                        asp.net mvc, but decided to stay pure front end.
+                    </li>
+                </ul>
+            </div>
+            <div class="ja-usage-img center">
+                <i class="fa fa-cubes fa-4x wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="50"></i>
+            </div>
+        </div>
+
+        <div class="ja-usage-each clearfix">
+            <div class="ja-usage-info">
+                <ul>
+                    <li>I am nearly an expert at AngularJS. Frontend routing, directives, scopes, $http & $q, consuming
+                        data, etc. etc.
+                    </li>
+                    <li>I can also help out w/Design via my expertise in Adobe Illustrator.</li>
+                    <li>I have have experience w/ReactJS as well.</li>
+                </ul>
+            </div>
+            <div class="ja-usage-img center">
+                <i class="fa fa-database fa-4x wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="50"></i>
+            </div>
+        </div>
+
+        <div class="ja-usage-each clearfix">
+            <div class="ja-usage-info">
+                <ul>
+                    <li>I can unit test the code with Karma and Jasmine</li>
+                    <li>I understand HTML5 semantics & API's such as local storage, canvas, and audio.</li>
+                    <li>I have experience w/NoSQL databases such as MongoDB & Firebase.</li>
+                </ul>
+            </div>
+            <div class="ja-usage-img center">
+                <i class="fa fa-industry fa-4x wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="50"></i>
+            </div>
+        </div>
+
+        <div class="ja-usage-each clearfix">
+            <div class="ja-usage-info">
+                <ul>
+                    <li>I very good knowledge of UX design, UI design, and graphic design</li>
+                    <li>I know about AJAX, jQuery, javascript design patterns and RESTful API's.</li>
+                    <li>I am in the process of learning D3.js, three.js, and Google's Material Design</li>
+                </ul>
+            </div>
+            <div class="ja-usage-img center">
+                <i class="fa fa-plug fa-4x wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="50"></i>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<script>
+    new WOW().init();
+</script>
+
+
