--- a/j-core/views/nav-webapp.html
+++ b/j-core/views/nav-webapp.html
@@ -1,20 +1,38 @@
 <div class="clearfix">
-  <div class="logo-block grid-child">
-    <a ui-sref="home" class="logo">
-      <h1>
-        <i class="fa fa-code"></i><strong>j.Alvarado()</strong><i class="fa fa-code"></i>
-      </h1>
-    </a>
-  </div>
-
-  <nav class="nav-block">
-    <ul class="ul-base nav">
-      <li><a ui-sref="home">Overview</a></li>
-      <li><a ui-sref="team">Team</a></li>
-      <li><a ui-sref="featured">Featured</a></li>
-      <li><a ui-sref="contact">Contact</a></li>
-      <li><a href>Blog</a></li>
-      <li><a ui-sref="hire-me">Hire Me!</a></li>
-    </ul>
-  </nav>
+    <div class="logo-block grid-child">
+        <a ui-sref="home" class="logo">
+            <h1>
+                <i class="fa fa-code"></i><strong>j.Alvarado()</strong><i class="fa fa-code"></i>
+            </h1>
+        </a>
+    </div>
+    <a href="" class="nav-trigger icon-menu"></a>
+    <nav class="nav-block">
+        <ul class="ul-base nav">
+            <li><a ui-sref="home">Overview</a></li>
+            <li><a ui-sref="role">Roles</a></li>
+            <li><a ui-sref="featured">App's</a></li>
+            <li><a ui-sref="contact">Contact</a></li>
+            <li><a ui-sref="blog">Blog</a></li>
+            <li><a ui-sref="hire-me"><strong>Hire Me !</strong></a></li>
+        </ul>
+    </nav>
 </div>
+
+<script>
+    var $navTrigger = jQuery('.nav-trigger'), $navBlock = jQuery('.nav-block');
+    $navTrigger.on('click', function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $navBlock.toggleClass('nav-block-open');
+    });
+
+    $navBlock.on('click', function () {
+        e.stopPropagation();
+    });
+
+    jQuery(window).on('click', function (e) {
+        $navBlock.removeClass('nav-block-open');
+    });
+</script>
+
